--- a/public/scss/user/dynamic/_variables.scss
+++ b/public/scss/user/dynamic/_variables.scss
@@ -3,8 +3,11 @@
 $bg: #f0f2f5;
 $blue: #567ca4;
 $bluetitle: #4b6d94;
+$darkbluetitle: #2d4d72;
 $darkblue: #384e65;
 $orange: #ef8823;
+$grey: #444444;
+$dark: #343434;
 
 /* base */
 
