--- a/public/views/user/footer.jade
+++ b/public/views/user/footer.jade
@@ -1,11 +1,37 @@
 .menu
 	.content
-		| fg
+		.title_container.middle_inline_block
+			.adorable_table
+				.adorable_cell.left realvkcom.ru
+		
+		.menu_container.middle_inline_block
+			ul.adorable_table
+				li.menu_item Раздел
+				li.menu_item Раздел
+				li.menu_item Раздел
+				li.menu_item Раздел
+				li.menu_item Раздел
+				li.menu_item Раздел
 
 .contacts
 	.content
-		| fg
+		.adorable_table
+				.adorable_cell.left
+					.text_container.middle_inline_block Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sodales cursus quam, vel euismod nulla commodo id. Aenean ornare hendrerit adipiscing. Nulla pulvinar semper mauris eu lobortis. Ut sapien leo, mattis quis pulvinar sed, sollicitudin ac nibh. Nunc vulputate tempus convallis. Curabitur vestibulum ornare libero, sed gravida neque dictum in.
+					
+					.labels_container.middle_inline_block
+						div Phone:
+						div Email:
+						div Address:
+					
+					.info_container.middle_inline_block
+						div (07) 5512 3456
+						div lorem@ipsumdollorsit.com.au
+						div 1234/56 Lorem Ipsum dolor sit, Consectuteur, QLD  4000
 
 .copyright
 	.content
-		| fg
+		.adorable_table
+			.adorable_cell.left © 2014 REALVKCOM.RU All rights reserved.
+		
+		.visa
