--- a/public/views/user/topper.jade
+++ b/public/views/user/topper.jade
@@ -2,16 +2,27 @@
 	.content
 		.adorable_table
 			.adorable_cell.left
-				.title_container
+				.title_container.middle_inline_block
 					.topper_title realvkcom.ru
 					.bottom_title без собак, без списаний, скорость до 3000
 				
-				.phone_container
+				.phone_container.middle_inline_block
 					.skype
-				
-				.buttons_container
 					
+					.text
+						div Имя
+						div +380 (00) 111 22 33
+				
+				.buttons_container.middle_inline_block
+					button.login Войти
+					button.register Регистрация
 
 .menu
 	.content
-		| fg
+		ul.adorable_table
+			li.menu_item список услуг
+			li.menu_item стоимость
+			li.menu_item вопросы
+			li.menu_item инструкция
+			li.menu_item контакты
+			li.menu_item о нас
