--- a/public/scss/user/core/_form.scss
+++ b/public/scss/user/core/_form.scss
@@ -1,29 +1,30 @@
 @import '../dynamic/_dynamic';
 
 button {
-	@include border_radius(99999em);
-	@include pt_sans_bold;
+	@include border_boxed;
+	@include border_radius(2px);
 	border: none;
 	outline-style: none;
 	background-color: white;
 	text-transform: uppercase;
-	font-size: 14px;
 	height: 30px;
-	padding: 0 35px;
+	padding: 0;
+	font-family: inherit;
+	color: inherit;
 }
 
 input {
-	@include border_radius(3px);
+	@include border_radius(2px);
 	@include border_boxed;
 	border: none;
 	height: 30px;
 	width: 100%;
-	font-size: 16px;
 	outline-style: none;
 	padding: 0 10px;
 	color: #4d4d4d;
 	background-color: #f2f2f2;
-	font-family: 'PT_Sans_Regular';
+	font-family: inherit;
+	color: inherit;
 	
 	&.error {
 		@include box_shadow(inset 0 0 0 2px #fd7b6a !important);
@@ -32,7 +33,7 @@ input {
 }
 
 textarea {
-	@include border_radius(5px);
+	@include border_radius(2px);
 	@include border_boxed;
 	background-color: #f2f2f2;
 	border: 0;
@@ -40,4 +41,6 @@ textarea {
 	width: 100%;
 	padding: 15px 20px;
 	resize: none;
+	font-family: inherit;
+	color: inherit;
 }
