--- a/public/scss/user/main/index.scss
+++ b/public/scss/user/main/index.scss
@@ -2,5 +2,243 @@
 @import '../dynamic/_dynamic';
 
 .module.main {
+	height: 690px;
+	background: url('/img/user/main/bg.png') no-repeat center bottom;
 	
+	button.register {
+		background-color: $orange;
+		font-size: 24px;
+		font-weight: bold;
+		text-transform: uppercase;
+		height: 60px;
+	}
+	
+	.arrow {
+		width: 130px;
+		height: 130px;
+		position: absolute;
+		background-color: white;
+		top: 0;
+		bottom: 0;
+		margin: auto;
+		cursor: pointer;
+		z-index: 30;
+		
+		&:before {
+			@include pseudo;
+			top: 0;
+			bottom: 0;
+			margin: auto;
+			width: 16px;
+			height: 30px;
+			background: url('/img/user/main/arrow.png') no-repeat;
+		}
+		
+		&.left {
+			left: -65px;
+			
+			&:before {
+				right: 29px;
+			}
+		}
+		
+		&.right {
+			right: -65px;
+			
+			&:before {
+				background-position: -17px 0;
+				left: 29px;
+			}
+		}
+	}
+	
+	.pages {
+		height: 100%;
+		position: relative;
+	}
+	
+	.page {
+		position: absolute;
+		height: 100%;
+		top: 0;
+		width: 100%;
+		left: 0;
+		display: none;
+		
+		&.active {
+			display: block;
+		}
+		
+		&.page_1 {
+			.top_container {
+				height: 180px;
+			}
+			
+			.center_container {
+				height: 340px;
+				width: 1045px;
+				
+				&:before {
+					@include pseudo;
+					width: 100%;
+					height: 100%;
+					z-index: 10;
+					background: url('/img/user/main/page_0_center_bg.png') right center no-repeat white;
+					opacity: 0.1;
+					left: 0;
+					top: 0;
+				}
+			}
+			
+			.center_content {
+				.adorable_cell {
+					padding: 30px;
+				}
+			}
+			
+			.number {
+				font-size: 180px;
+				line-height: 135px;
+				font-weight: bold;
+				color: #4a6c90;
+			}
+			
+			.register {
+				width: 100%;
+				margin-top: 60px;
+			}
+			
+			.bottom_title {
+				font-size: 20px;
+				font-weight: 500;
+				margin-top: 60px;
+				line-height: 30px;
+				color: $dark;
+			}
+		}
+		
+		&.page_2 {
+			.top_container {
+				height: 130px;
+			}
+			
+			.center_container {
+				height: 430px;
+			}
+			
+			.center_content {
+				.adorable_cell {
+					white-space: nowrap;
+				}
+			}
+			
+			.advantage {
+				@include border_radius(2px);
+				width: 255px;
+				height: 370px;
+				white-space: normal;
+				color: $bluetitle;
+				font-size: 18px;
+				font-weight: bold;
+				position: relative;
+				
+				.bottom_title {
+					height: 140px;
+					position: absolute;
+					width: 100%;
+					left: 0;
+					bottom: 0;
+				}
+				
+				.adorable_cell {
+					white-space: normal;
+					padding: 0 30px;
+				}
+			}
+			
+			.advantage_1 {
+				background: url('/img/user/main/advantage_1_bg.png') no-repeat center top white;
+			}
+			
+			.advantage_2 {
+				background: url('/img/user/main/advantage_2_bg.png') no-repeat center top white;
+				margin-left: 30px;
+			}
+			
+			.advantage_3 {
+				background: url('/img/user/main/advantage_3_bg.png') no-repeat center top white;
+				margin-left: 30px;
+			}
+			
+			.advantage_4 {
+				background: url('/img/user/main/advantage_4_bg.png') no-repeat center top white;
+				margin-left: 30px;
+				height: 410px;
+				
+				.bottom_title {
+					height: 180px;
+				}
+				
+				.checks {
+					@include border_boxed;
+					width: 130px;
+					padding: 14px 20px 0;
+					text-align: left;
+					margin: 0 auto;
+					font-size: 16px;
+					font-weight: normal;
+					color: $dark;
+				}
+				
+				.check {
+					margin-top: 6px;
+				}
+				
+				.check_title {
+					margin-left: 13px;
+				}
+			}
+		}
+		
+		.top_container {
+			font-size: 30px;
+			font-weight: bold;
+			color: $darkbluetitle;
+			text-transform: uppercase;
+		 }
+		
+		.center_container {
+			@include border_radius(2px);
+			margin: 0 auto;
+			position: relative;
+		}
+		
+		.center_content {
+			z-index: 20;
+		}
+		
+		.step {
+			&.step_1 {
+				width: 285px;
+			}
+			
+			&.step_2 {
+				width: 160px;
+				margin-left: 125px;
+			}
+			
+			&.step_3 {
+				width: 160px;
+				margin-left: 190px;
+			}
+		}
+		
+		.button_container {
+			height: 110px;
+			
+			.register {
+				width: 285px;
+			}
+		}
+	}
 }
