--- a/public/views/user/main/content.jade
+++ b/public/views/user/main/content.jade
@@ -9,7 +9,7 @@
 			
 			.center_container
 				.center_content.adorable_table
-					.adorable_cell.bottom
+					.adorable_cell.bottom.left
 						.step.bottom_inline_block.step_1
 							.number 1
 							button.register РЕГИСТРИРУЙТЕСЬ
