--- a/public/views/user/route.jade
+++ b/public/views/user/route.jade
@@ -1,4 +1,4 @@
 script#route_mustache(type="text/mustache")
 	| {{#each modules}}
-	| <div class="module {{name}}{{#if active}} active{{/if}}" id="{{id}}"></div>
+	| <div class="module {{name}}{{#if active}} active{{/if}}" id="{{id}}"><div class="module_preload"><img src="/img/preloader.gif" /></div></div>
 	| {{/each}}
