--- a/public/scss/user/core/_normalize.scss
+++ b/public/scss/user/core/_normalize.scss
@@ -109,7 +109,7 @@ body {
  */
 
 a:focus {
-    outline: thin dotted;
+    outline: none;
 }
 
 /**
@@ -118,7 +118,7 @@ a:focus {
 
 a:active,
 a:hover {
-    outline: 0;
+    outline: none;
 }
 
 /* ==========================================================================
