--- a/public/scss/user/dynamic/_variables.scss
+++ b/public/scss/user/dynamic/_variables.scss
@@ -5,6 +5,8 @@ $blue: #567ca4;
 $bluetitle: #4b6d94;
 $darkbluetitle: #2d4d72;
 $darkblue: #384e65;
+$darkbluebg: #385a7d;
+$lightblueshadow: #f7f9fd;
 $orange: #ef8823;
 $grey: #444444;
 $dark: #343434;
