--- a/public/views/user/topper.jade
+++ b/public/views/user/topper.jade
@@ -3,8 +3,9 @@
 		.adorable_table
 			.adorable_cell.left
 				.title_container.middle_inline_block
-					.topper_title realvkcom.ru
-					.bottom_title без собак, без списаний, скорость до 3000
+					.topper_title
+						a(href="/") realvkcom.ru
+					.bottom_title До 3000 в сутки
 				
 				.phone_container.middle_inline_block
 					.skype
@@ -24,5 +25,6 @@
 			li.menu_item стоимость
 			li.menu_item вопросы
 			li.menu_item инструкция
+			a.menu_item.module_tab.module_tab_news(href="/news") новости сервиса
 			li.menu_item контакты
 			li.menu_item о нас
