--- a/public/views/user/topper.jade
+++ b/public/views/user/topper.jade
@@ -23,7 +23,7 @@
 		ul.adorable_table
 			li.menu_item список услуг
 			li.menu_item стоимость
-			li.menu_item вопросы
+			a.menu_item.module_tab.module_tab_faq(href="/faq") вопросы
 			li.menu_item инструкция
 			a.menu_item.module_tab.module_tab_news(href="/news") новости сервиса
 			li.menu_item контакты
