--- a/public/scss/user/core/_form.scss
+++ b/public/scss/user/core/_form.scss
@@ -1,46 +1,39 @@
 @import '../dynamic/_dynamic';
 
-button {
+input, textarea, button {
 	@include border_boxed;
 	@include border_radius(2px);
-	border: none;
-	outline-style: none;
-	background-color: white;
-	text-transform: uppercase;
-	height: 30px;
-	padding: 0;
 	font-family: inherit;
 	color: inherit;
+	font-size: inherit;
+	background-color: white;
 }
 
-input {
-	@include border_radius(2px);
-	@include border_boxed;
-	border: none;
-	height: 30px;
+input, textarea {
 	width: 100%;
-	outline-style: none;
-	padding: 0 10px;
-	color: #4d4d4d;
-	background-color: #f2f2f2;
-	font-family: inherit;
-	color: inherit;
+	border: 1px solid #91a8c3;
 	
 	&.error {
-		@include box_shadow(inset 0 0 0 2px #fd7b6a !important);
-		background: white !important;
+		border: 1px solid #fd7b6a;
 	}
 }
 
+input {
+	height: 30px;
+	outline-style: none;
+	padding: 0 10px;
+}
+
 textarea {
-	@include border_radius(2px);
-	@include border_boxed;
-	background-color: #f2f2f2;
-	border: 0;
-	color: #b2b2b2;
-	width: 100%;
-	padding: 15px 20px;
+	height: 100%;
+	padding: 10px;
 	resize: none;
-	font-family: inherit;
-	color: inherit;
+}
+
+button {
+	border: none;
+	outline-style: none;
+	text-transform: uppercase;
+	height: 30px;
+	padding: 0;
 }
