--- a/public/scss/user/faq/index.scss
+++ b/public/scss/user/faq/index.scss
@@ -2,8 +2,120 @@
 @import '../dynamic/_dynamic';
 
 .module.faq {
-	height: 690px;
 	background: url('/img/user/main/bg.png') no-repeat center bottom;
+	color: $darkbluetitle;
 	
+	.top_title {
+		@include box_shadow(inset 0 -2px 0 0 $lightblueshadow);
+		height: 60px;
+		font-size: 20px;
+		text-transform: uppercase;
+		color: $orange;
+		font-weight: bold;
+		
+		.adorable_cell {
+			padding: 0 0 0 30px;
+		}
+		
+		&.ask_question {
+			.adorable_cell {
+				padding: 0 0 0 39px;
+			}
+		}
+	}
 	
+	.items_container {
+		@include box_shadow(0 2px 0 0 $lightblueshadow);
+		padding: 14px 57px 19px;
+		list-style: none;
+	}
+	
+	.item {
+		@include my_inline_block;
+		margin: 8px 0;
+		position: relative;
+		width: 100%;
+		
+		&:before {
+			@include pseudo;
+			@include rounded;
+			background-color: $orange;
+			width: 5px;
+			height: 5px;
+			top: 8px;
+			left: -17px;
+		}
+		
+		&.active {
+			.top_label {
+				text-decoration: none;
+				font-weight: bold;
+			}
+		}
+	}
+	
+	.top_label {
+		font-size: 16px;
+		text-decoration: underline;
+		font-weight: 500;
+		
+		span {
+			cursor: pointer;
+		}
+	}
+	
+	.text {
+		margin: 10px 0 7px;
+	}
+	
+	.faq_form {
+		padding: 20px 0;
+		overflow: hidden;
+	}
+	
+	.inputs_container {
+		width: 540px;
+		float: right;
+		margin-right: 40px;
+		
+		.left {
+			width: 160px;
+			margin-right: 20px;
+		}
+		
+		.email {
+			margin-top: 20px;
+		}
+		
+		.explanation {
+			margin-top: 10px;
+			color: $darkbluetitle;
+			opacity: 0.7;
+			font-size: 12px;
+			padding: 0 15px;
+		}
+		
+		.star {
+			color: $orange;
+		}
+		
+		.right {
+			width: 360px;
+		}
+		
+		.question {
+			height: 150px;
+		}
+	}
+	
+	.send {
+		margin-right: 40px;
+		float: right;
+		clear: both;
+		margin-top: 20px;
+		background-color: $orange;
+		width: 105px;
+		color: white;
+		text-transform: none;
+	}
 }
