almost done cabinet markup

--- a/public/scss/user/dynamic/_variables.scss
+++ b/public/scss/user/dynamic/_variables.scss
@@ -10,6 +10,8 @@ $lightblueshadow: #f7f9fd;
 $orange: #ef8823;
 $grey: #444444;
 $dark: #343434;
+$lightyellow: #fffed7;
+$lightgreen: #d8ffd7;
 
 /* base */
 
