--- a/public/views/user/layout.jade
+++ b/public/views/user/layout.jade
@@ -21,7 +21,7 @@ html
 			#footer.footer
 				include footer
 		
-		script(src="/js/plugins/steal/steal.js", config-path="/js/app/user/config.js", main="js/app/user/core/")
+		script(src="/js/plugins/steal/steal.js", config-path="/js/app/user/config.js", main="js/app/user/core/core")
 		
 		block scripts
 			include route
