--- a/public/scss/user/core/_base.scss
+++ b/public/scss/user/core/_base.scss
@@ -99,7 +99,7 @@ body {
 	}
 	
 	.phone_container {
-		width: 445px;
+		width: 300px;
 		
 		.skype {
 			@include box_shadow(0px 1px 0px 0px rgba(56, 165, 199, 1));
@@ -121,7 +121,8 @@ body {
 	}
 	
 	.buttons_container {
-		width: 190px;
+		width: 335px;
+		text-align: right;
 		
 		.login {
 			border: 1px solid $bluetitle;
@@ -129,14 +130,13 @@ body {
 			color: $bluetitle;
 			font-size: 13px;
 			font-weight: 500;
-			float: left;
 		}
 		
 		.register {
 			width: 110px;
 			background-color: $bluetitle;
 			font-size: 12px;
-			float: right;
+			margin-left: 10px;
 		}
 	}
 	
@@ -252,6 +252,36 @@ body {
 	width: 905px;
 	margin: 20px auto;
 	background-color: white;
+}
+
+.top_title {
+	@include box_shadow(inset 0 -2px 0 0 $lightblueshadow, 0 1px 0 0 #f6f6f6);
+	height: 60px;
+	font-size: 20px;
+	text-transform: uppercase;
+	color: $orange;
+	font-weight: bold;
+	
+	.adorable_cell {
+		padding: 0 0 0 24px;
+	}
+}
+
+.items_container {
+	height: 580px;
+	overflow: auto;
+	color: $darkbluetitle;
+	
+	.item {
+		@include border_boxed;
+		@include box_shadow(2px 0 0 0 $lightblueshadow, 0 2px 0 0 $lightblueshadow);
+		width: 885px;
+		padding: 15px 25px 20px;
+		
+		&:not(:last-child) {
+			padding-bottom: 22px;
+		}
+	}
 }
 
 .error {
