--- a/public/views/user/cabinet/content.jade
+++ b/public/views/user/cabinet/content.jade
@@ -14,7 +14,7 @@
 					.adorable_cell.age Возраст
 					.adorable_cell.quantity Кол-во
 					.adorable_cell.price Цена (Руб)
-					.adorable_cell.status Статус
+					.adorable_cell.status.head Статус
 				
 				.cabinet_row.item
 					.adorable_cell.number 000 000 004
@@ -26,6 +26,8 @@
 					.adorable_cell.quantity 5 000
 					.adorable_cell.price 45 000
 					.adorable_cell.status.stopped
+						.status_inside
+						
 				
 				.cabinet_row.item
 					.adorable_cell.number 000 000 003
@@ -37,6 +39,7 @@
 					.adorable_cell.quantity 7 000
 					.adorable_cell.price 87 000
 					.adorable_cell.status.stopped
+						.status_inside
 				
 				.cabinet_row.item
 					.adorable_cell.number 000 000 002
@@ -48,6 +51,7 @@
 					.adorable_cell.quantity 23 000
 					.adorable_cell.price 178 000
 					.adorable_cell.status.running
+						.status_inside
 				
 				.cabinet_row.item
 					.adorable_cell.number 000 000 001
@@ -59,3 +63,4 @@
 					.adorable_cell.quantity 10 000
 					.adorable_cell.price 20 000
 					.adorable_cell.status.done
+						.status_inside
