--- a/public/views/user/topper.jade
+++ b/public/views/user/topper.jade
@@ -22,7 +22,7 @@
 	.content
 		ul.adorable_table
 			li.menu_item список услуг
-			li.menu_item стоимость
+			a.menu_item.module_tab.module_tab_cost(href="/cost") стоимость
 			a.menu_item.module_tab.module_tab_faq(href="/faq") вопросы
 			li.menu_item инструкция
 			a.menu_item.module_tab.module_tab_news(href="/news") новости сервиса
