--- a/public/scss/user/core/_base.scss
+++ b/public/scss/user/core/_base.scss
@@ -39,10 +39,12 @@ body {
 }
 
 .module {
+	background: url('/img/user/main/bg.png') no-repeat center bottom;
 	position: relative;
 	display: none;
 	overflow: hidden;
 	min-height: 690px;
+	color: $darkbluetitle;
 	
 	&.active {
 		display: block;
