--- a/public/css/user/cost/index.css
+++ b/public/css/user/cost/index.css
@@ -1,1 +1,1 @@
-.module.cost .cost_panel{height:640px}
+.module.cost .cost_panel{height:640px}.module.cost .top_title .adorable_cell{padding:0 0 0 31px}.module.cost .calculator{height:310px}.module.cost .order{height:210px}
