--- a/public/scss/user/cost/index.scss
+++ b/public/scss/user/cost/index.scss
@@ -6,5 +6,17 @@
 		height: 640px;
 	}
 	
+	.top_title {
+		.adorable_cell {
+			padding: 0 0 0 31px;
+		}
+	}
 	
+	.calculator {
+		height: 310px;
+	}
+	
+	.order {
+		height: 210px;
+	}
 }
