--- a/public/views/user/cost/content.jade
+++ b/public/views/user/cost/content.jade
@@ -3,4 +3,11 @@
 		.top_title.adorable_table
 			.adorable_cell.left Калькулятор услуг
 		
+		.calculator
+			
 		
+		.top_title.adorable_table
+			.adorable_cell.left Быстрое оформление заказа
+		
+		.order
+			
